--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mspec by BiomedicalHosting</title>
+    <title>mspec by BiomedicalHosting</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Mspec</h1>
+        <h1>mspec</h1>
         <p>This project hosts the emerging standard for NIST .mspec which should stabilize and supercede the existing de facto .msp format.</p>
 
         <p class="view"><a href="https://github.com/BiomedicalHosting/mspec">View the Project on GitHub <small>BiomedicalHosting/mspec</small></a></p>
